compiler/tests/safety/fail/x86-64/array_init.jazz
export
fn bad_read() -> reg u64 {
  stack u64[2] t;
  reg u64 r;
  t[0] = 42;
  t[1] = 33;
  ArrayInit(t);
  r = t[0];
  return r;
}
